# OpsPortal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  opsportal.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
examples/: .gitlab-ci.yml  docker-compose.yml
scripts/: pre-commit
src/opsportal/: __init__.py  __main__.py
src/opsportal/adapters/: _config_mixin.py  appsecone.py  base.py  flowboard.py  localesync.py  registry.py  releaseboard.py  releasepilot.py
src/opsportal/app/: factory.py  lifespan.py  middleware.py  routes.py  routes_admin.py  routes_api.py  routes_integrations.py
src/opsportal/config/: manifest.py
src/opsportal/core/: errors.py  network.py  settings.py
src/opsportal/services/: alert_manager.py  artifact_manager.py  audit_log.py  auth_manager.py  backup_service.py  cache.py  health.py  (+18 more)
tests/: _integration_fakes.py  conftest.py  test_adapters.py  test_app.py  test_config.py  test_csp_and_config_resolution.py  test_csrf_and_platform.py  test_csrf_protection.py  test_enterprise_csp_and_config.py  test_enterprise_features.py  test_enterprise_ui_and_templates.py  test_health.py  test_install_behavior.py  test_integration_aggregators.py  test_integration_fallbacks.py  test_integration_services.py  test_integrations.py  test_localesync.py  test_portal_state.py  test_process_manager.py  test_remote_sourcing.py  test_security.py  test_ui_components_and_templates.py  test_ui_quality_checks.py  test_ui_regression.py  test_unified_adapters.py
(+25 files in other folders)
